Name:           distributed-commands
Version:        0.1
Stability:      experimental
Synopsis:       Provides commands to execute in remote hosts.
Homepage:       https://github.com/tweag/halon
License:        Apache-2.0
Copyright:      (C) 2014 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       distributed-commands/

Flag distributed-tests
  Description: Enables distributed tests.
  Default: False

Flag digital-ocean-tests
  Description: Enables tests on Digital Ocean.
  Default: False

Flag docker-tests
  Description: Enables tests on docker.
  Default: False

Library
  Hs-Source-Dirs:  src
  Default-Language: Haskell2010
  Ghc-Options:  -Wall -Werror
  Exposed-Modules: Control.Distributed.Commands.DigitalOcean
                   Control.Distributed.Commands.Docker
                   Control.Distributed.Commands
                   Control.Distributed.Commands.Internal.Log
                   Control.Distributed.Commands.Internal.Probes
                   Control.Distributed.Commands.IPTables
                   Control.Distributed.Commands.Management
                   Control.Distributed.Commands.Process
                   Control.Distributed.Commands.Providers
                   Control.Distributed.Commands.Providers.DigitalOcean
                   Control.Distributed.Commands.Providers.Docker
  Build-Depends:   aeson >= 0.8.0.1
                  ,aeson-pretty >= 0.7.1
                  ,base
                  ,base64-bytestring>=1.0.0.1
                  ,binary>=0.7.1.0
                  ,bytestring >= 0.10.4.0
                  ,distributed-process >= 0.5.0
                  ,distributed-static >= 0.3.0.0
                  ,exceptions >= 0.8.3
                  ,lifted-async >= 0.2.0.2
                  ,mtl >= 2.1.3
                  ,network >= 2.4.2.3
                  ,process >= 1.2.0.0
                  ,scientific >= 0.3.3.1
                  ,text >= 1.2.0.0
                  ,time >= 1.4
                  ,transformers >= 0.3
                  ,unordered-containers >= 0.2.5.0

Test-Suite unit-tests
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          unit-tests.hs
  Ghc-Options:      -threaded -Wall -Werror
  Build-Depends:    base
                   ,distributed-commands
  Buildable:        True

Test-Suite digitalocean
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          digitalocean.hs

  Ghc-Options: -threaded -Wall -Werror

  if flag(digital-ocean-tests)
    Build-Depends:   distributed-commands
                    ,base
  else
    Buildable:      False

Test-Suite docker
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          docker.hs

  Ghc-Options: -threaded -Wall -Werror

  if flag(docker-tests)
    Build-Depends:   distributed-commands
                    ,base
                    ,transformers
  else
    Buildable:      False


Test-Suite test-distributed-process
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          test-distributed-process.hs

  Ghc-Options: -threaded -Wall -Werror

  if flag(distributed-tests)
    Build-Depends:  distributed-commands
                   ,base
                   ,binary>=0.7.1.0
                   ,distributed-process
                   ,filepath>=1.3.0.2
                   ,lifted-base >= 0.2.3.0
                   ,network-transport-tcp
  else
    Buildable:      False
