Name:           distributed-process-scheduler
Version:        0.1
Stability:      experimental
Synopsis:       A scheduler for events in a distributed system.
Description:    If the processes in a Cloud Haskell application communicate with
                each other exclusively through messages, this library offers a
                scheduler that can be used to sequentialize delivery and processing
                of messages in repeatable fashion (i.e. so executions are reproducible).
Homepage:       https://github.com/tweag/halon
License:        AllRightsReserved
Copyright:      (C) 2013 Xyratex Technology Limited
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       distributed-process-scheduler/

Library
  Hs-Source-Dirs:  src
  Default-Language: Haskell2010
  Ghc-Options:     -O -Wall -Werror
  Exposed-Modules: Control.Distributed.Process
                   Control.Distributed.Process.Internal.Messaging
                   Control.Distributed.Process.Internal.Types
                   Control.Distributed.Process.Closure
                   Control.Distributed.Process.Node
                   Control.Distributed.Process.Serializable
                   Control.Distributed.Process.Trans
                   Control.Distributed.Process.Scheduler
  Other-Modules:   Control.Distributed.Process.Scheduler.Internal
  Build-Depends:   base
                   ,binary >= 0.6
                   ,bytestring
                   ,containers
                   ,distributed-process >= 0.4
                   ,distributed-process-trans
                   ,mtl
                   ,random
                   ,stm
                   ,unix

Test-Suite unit-tests-with-scheduler
  Type:             exitcode-stdio-1.0
  Main-Is:          with_scheduler.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Ghc-Options:      -Wall -threaded
  Build-Depends:    distributed-process-scheduler == 0.1
                    ,base >= 4.5
                    ,distributed-process-scheduler
                    ,mtl >= 2.0
                    ,network-transport
                    ,network-transport-tcp
                    ,unix

Test-Suite unit-tests-wo-scheduler
  Type:             exitcode-stdio-1.0
  Main-Is:          wo_scheduler.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Ghc-Options:      -Wall -threaded
  Build-Depends:    distributed-process-scheduler == 0.1
                    ,base >= 4.5
                    ,distributed-process-scheduler
                    ,mtl >= 2.0
                    ,network-transport
                    ,network-transport-tcp
                    ,unix
