Name:           distributed-process-scheduler
Version:        0.1
Stability:      experimental
Synopsis:       A scheduler for events in a distributed system.
Description:    If the processes in a Cloud Haskell application communicate with
                each other exclusively through messages, this library offers a
                scheduler that can be used to sequentialize delivery and processing
                of messages in repeatable fashion (i.e. so executions are reproducible).
Homepage:       https://github.com/tweag/halon
License:        Apache-2.0
Copyright:      (C) 2013 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       distributed-process-scheduler/

Library
  Hs-Source-Dirs:  src
  Default-Language: Haskell2010

  Ghc-Options: -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Exposed-Modules: Control.Distributed.Process
                   Control.Distributed.Process.Internal.Messaging
                   Control.Distributed.Process.Internal.Primitives
                   Control.Distributed.Process.Internal.StrictMVar
                   Control.Distributed.Process.Internal.Types
                   Control.Distributed.Process.Closure
                   Control.Distributed.Process.Node
                   Control.Distributed.Process.Serializable
                   Control.Distributed.Process.Trans
                   Control.Distributed.Process.Scheduler
                   Control.Distributed.Process.Scheduler.Raw
                   System.Clock
  Other-Modules:   Control.Distributed.Process.Scheduler.Internal
  Build-Depends:   base
                   ,binary >= 0.6
                   ,bytestring
                   ,clock > 0.6
                   ,containers
                   ,data-accessor >= 0.2.2.6
                   ,distributed-process >= 0.4
                   ,distributed-process-trans
                   ,exceptions
                   ,mtl
                   ,network-transport
                   ,random
                   ,stm
                   ,time

Test-Suite scheduler-tests
  Type:             exitcode-stdio-1.0
  Main-Is:          scheduler-tests.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    TestSuite

  Ghc-Options: -Wall

  if flag(maintainer)
    Ghc-Options: -Werror -threaded

  Build-Depends:    distributed-process-scheduler
                    ,base >= 4.5
                    ,distributed-process-scheduler
                    ,exceptions
                    ,mtl >= 2.0
                    ,network-transport
                    ,network-transport-inmemory
                    ,unix

Test-Suite tests
  Type:             exitcode-stdio-1.0
  Main-Is:          tests.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    TestSuite

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:    base >= 4.5
                    ,distributed-process-scheduler
                    ,exceptions
                    ,mtl >= 2.0
                    ,network-transport
                    ,network-transport-inmemory
                    ,unix
