Name:           distributed-process-test
Version:        0.1
Stability:      experimental
Synopsis:       Simple driver around the test framework shipped with Cabal.
Description:    This driver behaves more appropriately with regards to test output
                compared to the default test stubs in Cabal.
Homepage:       https://parsci.assembla.com/code/eiow-ha/git/nodes/
License:        AllRightsReserved
Copyright:      (C) 2013 Xyratex Technology Limited
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@git.assembla.com:eiow-ha.git
  Subdir:       cabal-test-driver

Library
  Hs-Source-Dirs:   src
  Default-Language: Haskell2010
  Exposed-Modules:  Test.Framework
                    Test.Driver
  Build-Depends:    base >= 4.5,
                    containers,
                    data-accessor,
                    directory >= 1.2,
                    distributed-process >= 0.4,
                    network-transport,
                    -- see note [Tasty upper bound]
                    tasty >= 0.7 && < 0.8,
                    tasty-hunit,
                    unix,
                    regex-posix
  Ghc-Options:      -Wall -Werror
  Default-Extensions: DeriveDataTypeable
                      RecordWildCards
                      ScopedTypeVariables

-- Note [Tasty upper bound]
-- ~~~~~~~~~~~~~~~~~~~~~~~~
--
-- Tasty 0.8 fails to build with compilation errors related to missing
-- functions in the ansi-terminal interface. Later versions of tasty
-- cannot be used as they depend on a version of ansi-terminal that
-- d-p-p bans with an upper bound constraint.
--
-- Probably this upper bound can be raised when dropping the dependency
-- on d-p-p.
