Name:           distributed-process-test
Version:        0.1
Stability:      experimental
Synopsis:       Simple driver around the test framework shipped with Cabal.
Description:    This driver behaves more appropriately with regards to test output
                compared to the default test stubs in Cabal.
Homepage:       https://github.com/tweag/halon
License:        Apache-2.0
Copyright:      (C) 2013 Seagate Technology LLC and/or its Affiliates
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       cabal-test-driver

Library
  Hs-Source-Dirs:   src
  Default-Language: Haskell2010
  Exposed-Modules:  Test.Framework
                    Test.Driver
                    Test.Tasty.Environment

  Ghc-Options: -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:    base >= 4.5,
                    containers,
                    data-accessor,
                    directory >= 1.2,
                    distributed-process-scheduler,
                    filepath,
                    network-transport,
                    tasty >= 0.7,
                    tasty-files,
                    tasty-hunit,
                    unix,
                    regex-posix

  Default-Extensions: DeriveDataTypeable
                      RecordWildCards
                      ScopedTypeVariables
