name:                genders
version:             0.1.0.0
synopsis:            Bindings to libgenders.
description:
  Genders data identifies nodes in a cluster of machines and allows
  associating attributes with each node. libgenders allows reading and
  querying genders data from a file.
license:             AllRightsReserved
Copyright:           © 2014 Xyratex Technology Limited
category:            Database
build-type:          Simple
cabal-version:       >=1.10

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

library
  exposed-modules:     Database.Genders
                       Database.Genders.Internal
  build-depends:       base >=4.7 && <4.8,
                       bytestring >= 0.10,
                       filepath,
                       vector >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010

  Ghc-Options: -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  extra-libraries:     genders

test-suite tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          test.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:    base >= 4.7,
                    bytestring,
                    genders,
                    hspec >= 1.11,
                    network >= 2.4,
                    vector >= 0.10
