name:                halon-instances
version:             0.1.0.0
synopsis:            Instances, orphans &c needed by all halon packages
-- description:
license:             Apache-2.0
copyright:           (C) 2016 Seagate Technology LLC and/or its Affiliates.
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HA.SafeCopy
                       HA.Aeson
  other-extensions:    DeriveDataTypeable
                       GeneralizedNewtypeDeriving
                       DeriveGeneric
  build-depends:       base >=4.6 && <5,
                       aeson,
                       binary,
                       bytestring,
                       base64-bytestring,
                       cereal,
                       distributed-process,
                       distributed-process-scheduler,
                       hashable,
                       network-transport,
                       options-schema,
                       safecopy,
                       template-haskell,
                       text,
                       uuid


  default-language:    Haskell2010
  ghc-options:         -Wall
